[package]
name = "client"
version = "0.1.0"
authors = ["TheOnlyArtz <callcraft456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "linker-flavor=ld.lld"]

[dependencies]
